[gd_scene load_steps=2 format=3 uid="uid://bdvr3tnde7kia"]

[ext_resource type="Script" path="res://decision_tree_logic/node_components/function_container.gd" id="1_l3cjj"]

[node name="FunctionContainer" type="PanelContainer"]
script = ExtResource("1_l3cjj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="FunctionNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "FunctionName"

[node name="FunctionName" type="TextEdit" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
scroll_fit_content_height = true

[node name="ParamLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Parameters"

[node name="ParamContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="AddParamButton" type="Button" parent="MarginContainer/VBoxContainer"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
text = "AddParam"

[node name="Remove Button" type="Button" parent="MarginContainer/VBoxContainer"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
text = "Remove Function"

[connection signal="pressed" from="MarginContainer/VBoxContainer/AddParamButton" to="." method="add_parameter"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Remove Button" to="." method="remove_self"]
